issue: fixed highlighting of fields on mobile

--- a/src/styles/notched-outline.scss
+++ b/src/styles/notched-outline.scss
@@ -52,6 +52,11 @@
 
   &:not(&--opened):hover {
     --so-color-outline: var(--so-color-outline-hover, SlateGrey);
+
+    &.select-option--mobile {
+      --so-color-outline: Green;
+      --so-width-outline: 4px;
+    }
   }
 
   &--opened {
